[tool.poetry]
name = "crypto-cli"
version = "0.1.0"
description = ""
authors = ["Ridho Pratama <p.ridho@yahoo.co.id>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
